Workspace lifecycle phases, JSpecify at API boundaries and nightly CI
- The workspace build runs as Preflight, Prepare, Resource, Run and
  Final phases, each its own class; client artifacts carry the version.
- Public API packages are @NullMarked with JSpecify; shared wire types
  live in cc.jumpkick.wire; the plugin SDK boundary is enforced.
- Build ETA prices only the anchors and suites the build will run; test
  sandboxes share one local-m2 per workspace under independent caps.
- EngineControls catalogs every [engine] key and JK_ENGINE_* env; docs
  and the dashboard dump derive from it. SECURITY.md sets reporting.
- Nightly CI runs coverage, benches and OS smoke; release sums are
  RSA-3072 signed so stock PowerShell verifies bootstrap downloads.